# FMD_MoistureDatalogger

./: .gitignore  .gitmodules  README.md
ElectronicProject/: README.md
ElectronicProject/V0.1-Proteus/: DataloggerUmidade_13.pdsprj
ElectronicProject/V0.2-Kicad/: 24C32A.kicad_sch  DHT22.kicad_sch  DS1307.kicad_sch  Display1602.kicad_sch  ESP-01.kicad_sch  ElectronicProject.kicad_prl  ElectronicProject.kicad_pro  Fonte.kicad_sch  Library.bak  Library.kicad_sym  MCP3008.kicad_sch  Microcontroller2560.kicad_sch  MoistureDatalogger.kicad_pcb  MoistureDatalogger.kicad_prl  MoistureDatalogger.kicad_pro  MoistureDatalogger.kicad_sch  MoistureSensor.kicad_sch  Nokia5110.kicad_sch  SDCard.kicad_sch  TecladoNumerico.kicad_sch
ElectronicProject/V0.2-Kicad/3D Models/: Battery Keeper 2032 PART.STEP  DG142V-3-5.08.STEP
ElectronicProject/V0.2-Kicad/Library.pretty/: Arduino_Mega2560_R3_Shield.kicad_mod  CP_Elec_5x5.8.kicad_mod  C_0805_2012Metric.kicad_mod  Crystal_DS26_D2.0mm_L6.0mm_Vertical.kicad_mod  D_DO-15_P10.16mm_Horizontal.kicad_mod  HARWIN_S8421-45R.kicad_mod  JST_XH_B16B-XH-A_1x16_P2.50mm_Vertical.kicad_mod  JST_XH_B3B-XH-AM_1x03_P2.50mm_Vertical.kicad_mod  JST_XH_B6B-XH-A_1x06_P2.50mm_Vertical.kicad_mod  JST_XH_B8B-XH-AM_1x08_P2.50mm_Vertical.kicad_mod  JST_XH_B8B-XH-A_1x08_P2.50mm_Vertical.kicad_mod  LED_D3.0mm.kicad_mod  MODULE_ESP-01.kicad_mod  R_0805_2012Metric.kicad_mod  SOIC-14_3.9x8.7mm_P1.27mm.kicad_mod  SOIC-16_3.9x9.9mm_P1.27mm.kicad_mod  SOIC-8_3.9x4.9mm_P1.27mm.kicad_mod  SOP65P640X110-14N.kicad_mod  SOT-223-3_TabPin2.kicad_mod  XDCR_DHT22.kicad_mod  microSD_HC_Hirose_DM3AT-SF-PEJM5.kicad_mod
Firmware/: Arquitetura.puml  CMakeLists.txt  README.md  build-firmware.bat
Firmware/Docs/Diagrams/: Arquitetura.puml  SequenciaDeIteracao.puml
Firmware/cmake/: avr-toolchain.cmake
Firmware/include/: HardwarePins.h
Firmware/include/Auxiliary/: StringManipulation.h
Firmware/include/Core/: CommandParser.h  DeviceManager.h  ISensor.h  ISystemService.h  SerialInterface.h  SystemMediator.h
Firmware/include/Drivers/: AdcChannelSensor.h  DHTController.h  MCP3008ChannelSensor.h  MCP3008Controller.h  RTC1307Controller.h  SDCardRWController.h  WiFiESPController.h
Firmware/src/: app.cpp
Firmware/src/Core/: CommandParser.cpp  DeviceManager.cpp  SerialInterface.cpp  SystemMediator.cpp
Firmware/src/Drivers/: AdcChannelSensor.cpp  DHTController.cpp  MCP3008Controller.cpp  Mcp3008ChannelSensor.cpp  RTC1307Controller.cpp  SDCardRWController.cpp  WiFiESPController.cpp
TerraMoistLogger/: README.md  TerraMoistLogger.pro
TerraMoistLogger/Docs/Diagramas/: DiagramaClasses.puml
TerraMoistLogger/include/: QSerialPortInfoOperatores.h  consolemanager.h  mainwindow.h  settingsdialog.h
TerraMoistLogger/src/: QSerialPortInfoOperatores.cpp  console.cpp  consolemanager.cpp  mainwindow.cpp  settingsdialog.cpp
TerraMoistLogger/ui/: console.ui  mainwindow.ui
